add(backbone): Added auth endpoint
