# swagger.yaml
@@ -62,6 +62,18 @@ paths:
     get:
       tags:
         - Users
+      summary: Get authenticated user details
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/users/auth:
+    get:
+      tags:
+        - Users
       summary: Authenticate User with token
       security:
         - bearerAuth: []
